🚸 show processed file/path on UDS in task description
fixes #2255