@@ -58,7 +58,6 @@ import java.util.concurrent.Callable;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.commons.io.FilenameUtils;
@@ -78,6 +77,7 @@ import org.tinymediamanager.core.MessageManager;
 import org.tinymediamanager.core.Settings;
 import org.tinymediamanager.core.TmmResourceBundle;
 import org.tinymediamanager.core.Utils;
+import org.tinymediamanager.core.entities.MediaEntity;
 import org.tinymediamanager.core.entities.MediaFile;
 import org.tinymediamanager.core.entities.MediaGenres;
 import org.tinymediamanager.core.entities.MediaSource;
@@ -404,12 +404,16 @@ public class MovieUpdateDatasourceTask extends TmmThreadPool {
           if (movieSetInDb != null) {
             // just add the media file if needed - if it is not locked
             if (!movieSetInDb.isLocked()) {
-              movieSetInDb.addToMediaFiles(new MediaFile(path));
+              MediaFile mf = new MediaFile(path);
+              movieSetInDb.addToMediaFiles(mf);
+              miTasks.add(new MovieMediaFileInformationFetcherTask(mf, movieSetInDb, true));
             }
           }
           else {
             // add this new one
-            movieSet.addToMediaFiles(new MediaFile(path));
+            MediaFile mf = new MediaFile(path);
+            movieSet.addToMediaFiles(mf);
+            miTasks.add(new MovieMediaFileInformationFetcherTask(mf, movieSet, true));
             MovieModuleManager.getInstance().getMovieList().addMovieSet(movieSet);
           }
         }
@@ -585,6 +589,8 @@ public class MovieUpdateDatasourceTask extends TmmThreadPool {
 
   private void parseMovieDirectory(Path movieDir, Path dataSource) {
     LOGGER.trace("Parsing '{}'", movieDir);
+    publishState(movieDir.toString());
+
     List<Path> movieDirList = listFilesAndDirs(movieDir);
     List<Path> files = new ArrayList<>();
     Set<String> normalizedVideoFiles = new HashSet<>(); // just for identifying MMD
@@ -1075,6 +1081,7 @@ public class MovieUpdateDatasourceTask extends TmmThreadPool {
    */
   private void createMultiMovieFromDir(Path dataSource, Path movieDir, List<Path> allFiles) {
     LOGGER.debug("Parsing multi  movie directory: {}", movieDir); // double space is for log alignment ;)
+    publishState(movieDir.toString());
 
     List<Movie> movies = movieList.getMoviesByPath(movieDir);
 
@@ -1587,13 +1594,13 @@ public class MovieUpdateDatasourceTask extends TmmThreadPool {
 
       for (MediaFile mf : new ArrayList<>(movie.getMediaFiles())) {
         if (StringUtils.isBlank(mf.getContainerFormat())) {
-          submitTask(new MediaFileInformationFetcherTask(mf, movie, false));
+          submitTask(new MovieMediaFileInformationFetcherTask(mf, movie, false));
         }
         else {
           // at least update the file dates
           if (MediaFileHelper.gatherFileInformation(mf)) {
             // okay, something changed with that movie file - force fetching mediainfo
-            submitTask(new MediaFileInformationFetcherTask(mf, movie, true));
+            submitTask(new MovieMediaFileInformationFetcherTask(mf, movie, true));
           }
         }
       }
@@ -1616,13 +1623,13 @@ public class MovieUpdateDatasourceTask extends TmmThreadPool {
 
       for (MediaFile mf : new ArrayList<>(movie.getMediaFiles())) {
         if (StringUtils.isBlank(mf.getContainerFormat())) {
-          submitTask(new MediaFileInformationFetcherTask(mf, movie, false));
+          submitTask(new MovieMediaFileInformationFetcherTask(mf, movie, false));
         }
         else {
           // did the file dates/size change?
           if (MediaFileHelper.gatherFileInformation(mf)) {
             // okay, something changed with that movie file - force fetching mediainfo
-            submitTask(new MediaFileInformationFetcherTask(mf, movie, true));
+            submitTask(new MovieMediaFileInformationFetcherTask(mf, movie, true));
           }
         }
       }
@@ -1673,7 +1680,7 @@ public class MovieUpdateDatasourceTask extends TmmThreadPool {
    */
   private List<MediaFile> getMediaFiles(List<MediaFile> mfs, MediaFileType... types) {
     List<MediaFileType> mediaFileTypes = Arrays.asList(types);
-    return mfs.stream().filter(mf -> mediaFileTypes.contains(mf.getType())).collect(Collectors.toList());
+    return mfs.stream().filter(mf -> mediaFileTypes.contains(mf.getType())).toList();
   }
 
   @Override
@@ -1714,6 +1721,10 @@ public class MovieUpdateDatasourceTask extends TmmThreadPool {
     if (fileNames.isEmpty()) {
       LOGGER.warn("Tried to list {}, but it was empty?!", directory);
     }
+
+    // return sorted
+    Collections.sort(fileNames);
+
     return fileNames;
   }
 
@@ -1729,7 +1740,7 @@ public class MovieUpdateDatasourceTask extends TmmThreadPool {
     List<Path> fileNames = new ArrayList<>();
 
     try (Stream<Path> directoryStream = Files.walk(directory, 1, FileVisitOption.FOLLOW_LINKS)) {
-      List<Path> allElements = directoryStream.collect(Collectors.toList());
+      List<Path> allElements = directoryStream.toList();
       for (Path path : allElements) {
         if (directory.toAbsolutePath().equals(path.toAbsolutePath())) {
           continue;
@@ -1745,6 +1756,10 @@ public class MovieUpdateDatasourceTask extends TmmThreadPool {
     catch (Exception e) {
       LOGGER.error("error on listFilesAndDirs2", e);
     }
+
+    // return sorted
+    Collections.sort(fileNames);
+
     return fileNames;
   }
 
@@ -2030,6 +2045,10 @@ public class MovieUpdateDatasourceTask extends TmmThreadPool {
       catch (IOException e) {
         LOGGER.error("error on listFilesOnly: {}", e.getMessage());
       }
+
+      // return sorted
+      Collections.sort(fileNames);
+
       return fileNames;
     }
   }
@@ -2090,5 +2109,21 @@ public class MovieUpdateDatasourceTask extends TmmThreadPool {
    */
   private static synchronized void incPostDir() {
     postDir++;
+  }
+
+  /**
+   * helper class just do inject the file name in the task description
+   */
+  private class MovieMediaFileInformationFetcherTask extends MediaFileInformationFetcherTask {
+    public MovieMediaFileInformationFetcherTask(MediaFile mediaFile, MediaEntity mediaEntity, boolean forceUpdate) {
+      super(mediaFile, mediaEntity, forceUpdate);
+    }
+
+    @Override
+    public void run() {
+      // pass the filename to the task description
+      publishState(mediaEntity.getTitle() + " - " + mediaFile.getFilename());
+      super.run();
+    }
   }
 }
